--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ logging.pattern.console=%-5level %logger{36} - %msg%n
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mybookstoredb
-spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.username=srinivas
+spring.datasource.password=srinivas
 
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
